tests/ui/async-await/drop-track-bad-field-in-fru.stderr
error[E0559]: variant `Option<_>::None` has no field named `value`
  --> $DIR/drop-track-bad-field-in-fru.rs:7:12
   |
LL |     None { value: (), ..Default::default() }.await;
   |            ^^^^^ `Option<_>::None` does not have this field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0559`.
